特性：完善模块代码

--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,12 @@
       {
         "libraryName": "antd"
       }
+    ],
+    [
+      "@babel/plugin-proposal-decorators",
+      {
+        "legacy": true
+      }
     ]
   ]
 }
