--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/classnames": "^2.2.10",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.36",
+    "@types/qs": "^6.9.2",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
     "@types/react-redux": "^7.1.7",
@@ -16,8 +17,10 @@
     "@types/react-router-dom": "^5.1.4",
     "@types/styled-components": "^5.1.0",
     "antd": "^4.1.4",
+    "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "node-sass": "^4.13.1",
+    "qs": "^6.9.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
@@ -25,14 +28,16 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.1.0",
     "typescript": "~3.8.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
+    "eject": "react-scripts eject",
+    "lint:css": "stylelint '**/*.tsx'"
   },
   "browserslist": {
     "production": [
@@ -48,6 +53,12 @@
   },
   "devDependencies": {
     "babel-plugin-import": "^1.13.0",
-    "redux-devtools": "^3.5.0"
+    "customize-cra": "^0.9.1",
+    "react-app-rewired": "^2.1.6",
+    "redux-devtools": "^3.5.0",
+    "stylelint": "^13.3.3",
+    "stylelint-config-recommended": "^3.0.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-processor-styled-components": "^1.10.0"
   }
 }
