--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.1.0",
-    "typescript": "~3.8.2"
+    "typescript": "~3.8.2",
+    "moment": "^2.29.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
